# TraceEdu

./: .gitignore  HOW_TO_RUN.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  README.md  entrypoint.sh  fix_database.py  fix_names.py  main.py  pyproject.toml  seed.py  seed_subjects.py
backend/alembic/: env.py
backend/alembic/versions/: 21eafe64223c_add_global_subjects_and_grade_column.py  4139ac9e0a0d_add_academic_units_to_global_subjects.py  94e759c3acae_link_subject_offerings_to_class_groups.py  9a1988aa5ac1_add_assessments_per_unit_to_subjects.py  b155972a6e6f_add_class_group_id_to_offerings.py  c020f6a6abbe_create_grades_table.py  f51b3f02b78c_add_regular_class_concept_to_class_.py
backend/app/api/v1/: dependencies.py  routes.py  schemas.py
backend/app/application/academic/: bulk_save_grades_use_case.py  get_offering_stats_use_case.py  list_offering_grades_use_case.py  save_assessment_grade_use_case.py
backend/app/application/auth/: login_use_case.py
backend/app/application/classroom/: create_group_use_case.py  delete_group_use_case.py  enroll_student_use_case.py  get_class_report_use_case.py  get_group_use_case.py  link_offering_to_group_use_case.py  list_groups_use_case.py
backend/app/application/enrollment/: create_enrollment_use_case.py  post_grade_use_case.py
backend/app/application/school/: list_schools_use_case.py  maintenance_use_cases.py  (+1 more)
backend/app/domain/: exceptions.py
backend/tests/: README.md
backend/tests/integration/: test_academic_flow.py  test_repositories.py
frontend/: Dockerfile  (+3 more)
(+121 files in other folders)
