[tool.poetry]
name = "traceedu-backend"
version = "0.1.0"
description = "Backend para o TraceEdu usando FastAPI"
authors = ["Admin <admin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.49"
psycopg2-binary = "^2.9.12"
alembic = "^1.18.4"
pydantic-settings = "^2.14.1"
pytest = "^9.0.3"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.12.1"
bcrypt = "<4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
